Fix spacing in code

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 html {
   font-family: 'Overpass', sans-serif;
   color: #fff;
+  background-image: linear-gradient(#ff9500, #ff5e3a);
+  background-size: cover;
 }
 
 body {
-  background-image: linear-gradient(#ff9500, #ff5e3a);
 }
